Add migration, ddl sql script, connection string

--- a/src/TestBackendDev/TestBackendDev.API/appsettings.json
+++ b/src/TestBackendDev/TestBackendDev.API/appsettings.json
@@ -5,7 +5,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionString": {
-    "TestBackendDevConnectionString": ""
+  "ConnectionStrings": {
+    "TestBackendDevConnectionString": "server=91.121.86.154;database=testbackenddev;Uid=testbackenddev;Pwd=zaq1@WSX;Convert Zero Datetime=True"
   }
 }
