--- a/src/TestBackendDev/TestBackendDev.API/TestBackendDev.API.csproj
+++ b/src/TestBackendDev/TestBackendDev.API/TestBackendDev.API.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.1.3" />
+    <PackageReference Include="ZNetCS.AspNetCore.Authentication.Basic" Version="3.0.0" />
   </ItemGroup>
 
   <ItemGroup>
